Note that the remaining Unsafe warning is not a future blocker
Running with --sun-misc-unsafe-memory-access=deny, which simulates the
removal, gives an identical result: LWJGL falls back to its reflection
accessor and the game renders and exits the same way.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>